# metaHeuristic_project

./: .gitignore  Dockerfile  GA_README.md  README.md  docker-compose.yml  requirements.txt
app/: __init__.py  boxplot20.py  compare.py  ga.py  pyproject.toml  vrp.py
data/: 200instance.vrp  ga_solution.sol  instance.vrp  pyvrp_solution.sol
